--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'point';
-      src: url('./font/point.eot?77836861');
-      src: url('./font/point.eot?77836861#iefix') format('embedded-opentype'),
-           url('./font/point.woff?77836861') format('woff'),
-           url('./font/point.ttf?77836861') format('truetype'),
-           url('./font/point.svg?77836861#point') format('svg');
+      src: url('./font/point.eot?74885533');
+      src: url('./font/point.eot?74885533#iefix') format('embedded-opentype'),
+           url('./font/point.woff?74885533') format('woff'),
+           url('./font/point.ttf?74885533') format('truetype'),
+           url('./font/point.svg?74885533#point') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -337,8 +337,8 @@ body {
         <div title="Code: 0xe817" class="the-icons span3"><i class="demo-icon icon-facebook">&#xe817;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xe817</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe818" class="the-icons span3"><i class="demo-icon icon-gmail_1x">&#xe818;</i> <span class="i-name">icon-gmail_1x</span><span class="i-code">0xe818</span></div>
-        <div title="Code: 0xe819" class="the-icons span3"><i class="demo-icon icon-gmail">&#xe819;</i> <span class="i-name">icon-gmail</span><span class="i-code">0xe819</span></div>
+        <div title="Code: 0xe818" class="the-icons span3"><i class="demo-icon icon-gmail">&#xe818;</i> <span class="i-name">icon-gmail</span><span class="i-code">0xe818</span></div>
+        <div title="Code: 0xe819" class="the-icons span3"><i class="demo-icon icon-gmail_1x">&#xe819;</i> <span class="i-name">icon-gmail_1x</span><span class="i-code">0xe819</span></div>
         <div title="Code: 0xe81a" class="the-icons span3"><i class="demo-icon icon-home_1x">&#xe81a;</i> <span class="i-name">icon-home_1x</span><span class="i-code">0xe81a</span></div>
         <div title="Code: 0xe81b" class="the-icons span3"><i class="demo-icon icon-home_fill">&#xe81b;</i> <span class="i-name">icon-home_fill</span><span class="i-code">0xe81b</span></div>
       </div>
@@ -388,9 +388,10 @@ body {
         <div title="Code: 0xe838" class="the-icons span3"><i class="demo-icon icon-x_1x">&#xe838;</i> <span class="i-name">icon-x_1x</span><span class="i-code">0xe838</span></div>
         <div title="Code: 0xe839" class="the-icons span3"><i class="demo-icon icon-x">&#xe839;</i> <span class="i-name">icon-x</span><span class="i-code">0xe839</span></div>
         <div title="Code: 0xe83a" class="the-icons span3"><i class="demo-icon icon-firefox">&#xe83a;</i> <span class="i-name">icon-firefox</span><span class="i-code">0xe83a</span></div>
-        <div title="Code: 0xe83d" class="the-icons span3"><i class="demo-icon icon-laptop">&#xe83d;</i> <span class="i-name">icon-laptop</span><span class="i-code">0xe83d</span></div>
+        <div title="Code: 0xe83b" class="the-icons span3"><i class="demo-icon icon-gmail-1">&#xe83b;</i> <span class="i-name">icon-gmail-1</span><span class="i-code">0xe83b</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe83d" class="the-icons span3"><i class="demo-icon icon-laptop">&#xe83d;</i> <span class="i-name">icon-laptop</span><span class="i-code">0xe83d</span></div>
         <div title="Code: 0xe83e" class="the-icons span3"><i class="demo-icon icon-mobile">&#xe83e;</i> <span class="i-name">icon-mobile</span><span class="i-code">0xe83e</span></div>
         <div title="Code: 0xe83f" class="the-icons span3"><i class="demo-icon icon-apple">&#xe83f;</i> <span class="i-name">icon-apple</span><span class="i-code">0xe83f</span></div>
       </div>
